tests/snapshots/run_wpt_conformance__litert_scatterElements_float16_tensors_along_axis_0.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
scatterElements.https.any.js scatterElements float16 tensors along axis 0, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: ScatterElements { input: 1, indices: 0, updates: 2, options: Some(MLScatterOptions { label: "", axis: 0 }), outputs: [3] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    indices: i32[2, 3];
    input: f16[3, 3];
    updates: f16[2, 3];
  }

  nodes {
    [output] = scatterElements(input, indices, updates, axis=0, label="");
  }

  outputs { output; }
}
