tests/snapshots/run_wpt_conformance__litert_scatterElements_float16_tensors_along_axis_1.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
scatterElements.https.any.js scatterElements float16 tensors along axis 1, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: ScatterElements { input: 1, indices: 0, updates: 2, options: Some(MLScatterOptions { label: "", axis: 1 }), outputs: [3] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    indices: i32[1, 2];
    input: f16[1, 5];
    updates: f16[1, 2];
  }

  nodes {
    [output] = scatterElements(input, indices, updates, axis=1, label="");
  }

  outputs { output; }
}
